<?xml version="1.0"?>
<package format="2">
  <name>gb_datahub</name>

  <version>0.1.0</version>
  <description>The gb_datahub package</description>

  <maintainer email="lbajo9@gmail.com">Lorena Bajo Rebollo</maintainer>

  <license>BSD</license>

  <author email="lbajo9@gmail.com">Lorena Bajo Rebollo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
