<?xml version="1.0"?>
<package format="2">
  <name>gb_datahub</name>

  <version>0.1.0</version>
  <description>The gb_datahub package</description>

  <maintainer email="lbajo9@gmail.com">Lorena Bajo Rebollo</maintainer>

  <license>BSD</license>

  <author email="lbajo9@gmail.com">Lorena Bajo Rebollo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>bica_graph</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>bica_graph</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>bica_graph</exec_depend>


  <export>

  </export>
</package>
